Minicart jump issue on iPad (#54)

--- a/app/design/frontend/Limitless/hudsonreed/Magento_Catalog/web/css/source/_module.less
+++ b/app/design/frontend/Limitless/hudsonreed/Magento_Catalog/web/css/source/_module.less
@@ -646,6 +646,7 @@
               padding:7px 0 7px 0;
               text-align:center;
               text-transform:uppercase;
+              text-decoration:none;
               font-size:@font-size__xs;
             }
             .price-box {
@@ -921,7 +922,7 @@
   }
 
   .product.info.detailed {
-    clear: none;
+    clear: right;
     float: right;
     width: 40%;
     margin-top: 20px;
