--- a/app/design/frontend/Limitless/hudsonreed/Magento_Checkout/web/css/source/module/_minicart.less
+++ b/app/design/frontend/Limitless/hudsonreed/Magento_Checkout/web/css/source/module/_minicart.less
@@ -127,6 +127,7 @@
       .lib-css(padding, 25px @minicart__padding-horizontal);
       right: 0;
       width: 320px;
+      position:absolute;
 
       .block-title {
         display: none;
@@ -449,6 +450,9 @@
       font-size:11px;
       text-transform:uppercase;
       display:inline-block;
+    }
+    &:after {
+      display:inline;
     }
   }
 }
